prod/gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: gateway-production
  namespace: production
spec:
  rules:
  - host: devheaven.nl
    http:
      paths:
      - path: /api\/((tasks\/|columns\/|boards\/).*)
        backend:
          serviceName: task-management-service
          servicePort: 80
      - path: /api\/((projects\/|milestones\/).*)
        backend:
          serviceName: project-management-service
          servicePort: 80
      - path: /api\/((invoices\/).*)
        backend:
          serviceName: invoice-service
          servicePort: 80
      - path: /api\/((hours\/).*)
        backend:
          serviceName: hour-service
          servicePort: 80
      - path: /api\/((auth\/|users\/).*)
        backend:
          serviceName: auth-service
          servicePort: 80
      - path: /api\/((personnel\/).*)
        backend:
          serviceName: personnel-service
          servicePort: 80
      - path: /?(.*)
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: /personnel/?(.*)
        backend:
          serviceName: personnel-service
          servicePort: 80
  - host: svc.devheaven.nl
    http:
      paths:
      - path: /task-management/?(.*)
        backend:
          serviceName: task-management-service
          servicePort: 80
      - path: /project-management/?(.*)
        backend:
          serviceName: project-management-service
          servicePort: 80
      - path: /invoice/?(.*)
        backend:
          serviceName: invoice-service
          servicePort: 80
      - path: /hour/?(.*)
        backend:
          serviceName: hour-service
          servicePort: 80
      - path: /auth/?(.*)
        backend:
          serviceName: auth-service
          servicePort: 80
  tls:
  - hosts:
    - devheaven.nl
    - svc.devheaven.nl
    secretName: production-cert
